Add resume download link and button to contact page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
 <p><a href="https://github.com/MANTRIPRAGADA-SAI-PAVAN-ADITYA">GitHub</a></p>
 <p><a href="https://linkedin.com/in/sai-pavan-aditya-mantripragada-0bb033159">LinkedIn</a></p>
 </div>
-
+<button class="card" onclick="openResume()">View Resume</button>
+<a href="resume.pdf" download>Download Resume</a>
 </main>
 
 <footer>© 2026</footer>
