Add modal for resume display in contact.html

--- a/contact.html
+++ b/contact.html
@@ -29,5 +29,11 @@
 
 <footer>© 2026</footer>
 <script src="script.js"></script>
+  <div class="modal" id="resumeModal">
+  <div class="modal-content">
+    <span class="close" onclick="closeResume()">✕</span>
+    <iframe src="resume.pdf"></iframe>
+  </div>
+</div>
 </body>
 </html>
