--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="index.html">Home</a>
   <a href="timeline.html">Timeline</a>
   <a href="projects.html">Projects</a>
+  <a href="architecture.html">Architecture</a>
   <a href="research.html">Research</a>
   <a href="contact.html">Contact</a>
 </nav>
