Update project link for Enterprise RAG Engine

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,9 @@
 <h2>Projects</h2>
 
 <div class="card">
-<h3>Enterprise RAG Engine</h3>
+<h3>
+<a href="project-rag.html">Enterprise RAG Engine</a>
+</h3>
 <p>LLM-powered legal & patent intelligence</p>
 <button class="toggle">View details</button>
 <div class="details">
