--- a/architecture.html
+++ b/architecture.html
@@ -19,32 +19,33 @@
 <main class="container">
 <h2>System Architecture</h2>
 
-<div class="card">
-<h3>How I Design ML Systems</h3>
-<p>
-I treat machine learning as a system, not a model. My designs prioritize
-data quality, observability, privacy, and long-term maintainability.
+<p class="tagline">
+I design ML systems as closed loops — data, models, decisions, feedback.
 </p>
-</div>
 
-<div class="card">
-<h3>Typical ML System Flow</h3>
-<ul>
-<li>Ingestion: Event-driven & batch pipelines (Salesforce, APIs, streams)</li>
-<li>Storage: Analytical & feature-ready layers (Snowflake, S3)</li>
-<li>Modeling: Reproducible training with versioned data & models</li>
-<li>Serving: Low-latency APIs or batch inference</li>
-<li>Monitoring: Drift, bias, data freshness, and performance</li>
-</ul>
+<div class="arch-diagram">
+
+  <div class="arch-node">Data Sources</div>
+  <div class="arch-line"></div>
+  <div class="arch-node">Ingestion Pipelines</div>
+  <div class="arch-line"></div>
+  <div class="arch-node">Feature & Storage Layer</div>
+  <div class="arch-line"></div>
+  <div class="arch-node">Model Training</div>
+  <div class="arch-line"></div>
+  <div class="arch-node">Inference APIs</div>
+  <div class="arch-line"></div>
+  <div class="arch-node">Monitoring & Drift</div>
+
 </div>
 
 <div class="card">
 <h3>Design Principles</h3>
 <ul>
+<li>Data quality dominates model quality</li>
+<li>Privacy is an architectural constraint</li>
+<li>Monitoring is part of the product</li>
 <li>Systems must degrade gracefully</li>
-<li>Privacy is an architectural concern, not a patch</li>
-<li>ML should integrate cleanly with business workflows</li>
-<li>Observability beats raw accuracy in production</li>
 </ul>
 </div>
 
