Enhance hero section with personal intro and update text
Added personal introduction to the hero section and updated the description for clarity.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
 </nav>
 
 <!-- HERO -->
+<!-- HERO -->
 <section class="hero">
   <div class="hero-inner">
+
+    <!-- PERSONAL INTRO (THIS WAS MISSING) -->
+    <p class="hero-eyebrow">Sai Pavan Aditya Mantripragada</p>
+
     <h1>
       Designing AI Systems<br/>
       That Survive Reality
     </h1>
 
     <p class="hero-sub">
-      I build production-grade machine learning and data systems —
-      from ingestion to decision — with a focus on scale, privacy,
-      and long-term reliability.
+      AI / ML Engineer focused on building production-grade data and machine
+      learning systems — from ingestion to decision — with an emphasis on
+      scale, privacy, and long-term reliability.
     </p>
 
     <div class="hero-tags">
@@ -39,6 +44,7 @@
       <span>LLMs & RAG</span>
       <span>MLOps</span>
     </div>
+
   </div>
 </section>
 
