Add personal introduction and update hero section

--- a/index.html
+++ b/index.html
@@ -17,24 +17,33 @@
   <a href="contact.html">Contact</a>
   <button id="themeToggle">◐</button>
 </nav>
+<!-- IDENTITY INTRO -->
+<section class="intro">
+  <div class="intro-inner">
+    <h1 class="intro-name">Sai Pavan Aditya Mantripragada</h1>
 
+    <p class="intro-role">
+      AI / ML Engineer · Data Platforms · Privacy-Preserving Systems
+    </p>
+
+    <p class="intro-desc">
+      I design and build production-grade machine learning and data systems
+      that operate under real-world constraints — scale, data quality,
+      regulation, and long-term maintainability.
+    </p>
+  </div>
+</section>
 <!-- HERO -->
 <!-- HERO -->
 <section class="hero">
   <div class="hero-inner">
-
-    <!-- PERSONAL INTRO (THIS WAS MISSING) -->
-    <p class="hero-eyebrow">Sai Pavan Aditya Mantripragada</p>
-
-    <h1>
+    <h2 class="hero-headline">
       Designing AI Systems<br/>
       That Survive Reality
-    </h1>
+    </h2>
 
     <p class="hero-sub">
-      AI / ML Engineer focused on building production-grade data and machine
-      learning systems — from ingestion to decision — with an emphasis on
-      scale, privacy, and long-term reliability.
+      Systems > scripts · Architecture > demos · Reliability > hype
     </p>
 
     <div class="hero-tags">
@@ -44,7 +53,6 @@
       <span>LLMs & RAG</span>
       <span>MLOps</span>
     </div>
-
   </div>
 </section>
 
