--- a/architecture.html
+++ b/architecture.html
@@ -48,7 +48,28 @@ I design ML systems as closed loops — data, models, decisions, feedback.
 <li>Systems must degrade gracefully</li>
 </ul>
 </div>
+<section class="card">
+  <h2>How My Systems Think</h2>
 
+  <ul class="thinking-list">
+    <li>
+      <strong>Data is treated as a product</strong><br/>
+      Ingestion pipelines enforce contracts, validation, and freshness checks.
+    </li>
+    <li>
+      <strong>Models are replaceable components</strong><br/>
+      No system is tied to a single architecture or vendor.
+    </li>
+    <li>
+      <strong>Decisions are observable</strong><br/>
+      Every prediction is traceable to data, features, and model version.
+    </li>
+    <li>
+      <strong>Feedback is mandatory</strong><br/>
+      Drift, bias, and performance are monitored continuously.
+    </li>
+  </ul>
+</section>
 </main>
 
 <footer>© 2026</footer>
