Add Enterprise RAG Engine project card to projects.html

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,19 @@
 </ul>
 </div>
 </div>
+<div class="card">
+  <h3>
+    <a href="project-rag.html">Enterprise RAG Engine</a>
+  </h3>
 
+  <img src="images/rag-preview.png" class="project-img" />
+
+  <p>LLM-powered legal & patent intelligence system.</p>
+
+  <a href="https://youtube.com/your-demo" target="_blank">
+    ▶ Watch execution demo
+  </a>
+</div>
 </main>
 
 <footer>© 2026</footer>
