--- a/timeline.html
+++ b/timeline.html
@@ -50,7 +50,16 @@
 <h3>B.E. Computer Science (Distinction)</h3>
 <p>Osmania University</p>
 </div>
-
+<div class="card event">
+  <span>2025 – Present</span>
+  <h3>AI / ML Engineer — Zensar</h3>
+  <p><strong>Scope:</strong> Enterprise data & ML systems</p>
+  <p><strong>Scale:</strong> Multi-source, production workloads</p>
+  <ul>
+    <li>Salesforce → Snowflake pipelines</li>
+    <li>Predictive analytics systems</li>
+  </ul>
+</div>
 </div>
 </main>
 
