--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,27 @@
 <button class="card" onclick="openResume()">View Resume</button>
 <a href="resume.pdf" download>Download Resume</a>
 </main>
+<div class="contact-grid">
+  <a href="https://github.com/..." target="_blank" class="contact-card">
+    <img src="icons/github.svg" />
+    <span>GitHub</span>
+  </a>
 
+  <a href="https://linkedin.com/..." target="_blank" class="contact-card">
+    <img src="icons/linkedin.svg" />
+    <span>LinkedIn</span>
+  </a>
+
+  <a href="https://leetcode.com/..." target="_blank" class="contact-card">
+    <img src="icons/leetcode.svg" />
+    <span>LeetCode</span>
+  </a>
+
+  <a href="https://kaggle.com/..." target="_blank" class="contact-card">
+    <img src="icons/kaggle.svg" />
+    <span>Kaggle</span>
+  </a>
+</div>
 <footer>© 2026</footer>
 <script src="script.js"></script>
   <div class="modal" id="resumeModal">
