--- a/research.html
+++ b/research.html
@@ -25,7 +25,15 @@
 <li>AR Indoor Navigation — IRJMETS (2021)</li>
 </ul>
 </div>
-
+<div class="card">
+  <h3>Federated Learning vs Differential Privacy</h3>
+  <p><em>IRJMETS, 2026</em></p>
+  <p>
+    Comparative study evaluating accuracy, privacy loss,
+    and convergence under decentralized constraints.
+  </p>
+  <a href="paper-link.pdf" target="_blank">Read paper</a>
+</div>
 </main>
 
 <footer>© 2026</footer>
