Update icon paths in contact.html

--- a/contact.html
+++ b/contact.html
@@ -27,22 +27,22 @@
 </main>
 <div class="contact-grid">
   <a href="https://github.com/..." target="_blank" class="contact-card">
-    <img src="icons/github.svg" />
+    <img src="icon/github.svg" />
     <span>GitHub</span>
   </a>
 
   <a href="https://linkedin.com/..." target="_blank" class="contact-card">
-    <img src="icons/linkedin.svg" />
+    <img src="icon/linkedin.svg" />
     <span>LinkedIn</span>
   </a>
 
   <a href="https://leetcode.com/..." target="_blank" class="contact-card">
-    <img src="icons/leetcode.svg" />
+    <img src="icon/leetcode.svg" />
     <span>LeetCode</span>
   </a>
 
   <a href="https://kaggle.com/..." target="_blank" class="contact-card">
-    <img src="icons/kaggle.svg" />
+    <img src="icon/kaggle.svg" />
     <span>Kaggle</span>
   </a>
 </div>
