Update timeline with current role and experiences
Added current role and previous experiences to timeline.

--- a/timeline.html
+++ b/timeline.html
@@ -1,69 +1,79 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Timeline</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<nav>
-  <a href="index.html">Home</a>
-  <a href="timeline.html">Timeline</a>
-  <a href="projects.html">Projects</a>
-  <a href="architecture.html">Architecture</a>
-  <a href="research.html">Research</a>
-  <a href="contact.html">Contact</a>
-</nav>
-
-<main class="container">
-<h2>Education & Experience</h2>
-
 <div class="timeline">
 
-<div class="card event">
-<span>2025 – Present</span>
-<h3>AI / ML Engineer — Zensar</h3>
-<ul>
-<li>Architected enterprise Salesforce → Snowflake pipelines</li>
-<li>Led shift from BI to predictive ML systems</li>
-</ul>
-</div>
+  <!-- CURRENT ROLE -->
+  <div class="card event">
+    <span>2025 – Present</span>
+    <h3>AI / ML Engineer — Zensar Technologies</h3>
+    <p><strong>Scope:</strong> Enterprise AI & data systems</p>
+    <p><strong>Focus:</strong> Production ML, data architecture, predictive platforms</p>
+    <ul>
+      <li>Architected Salesforce → Snowflake data pipelines</li>
+      <li>Led transition from descriptive BI to predictive ML systems</li>
+      <li>Designed ML-ready data contracts and validation layers</li>
+    </ul>
+  </div>
 
-<div class="card event">
-<span>2024 – 2025</span>
-<h3>Supply Chain Data Analyst — Greene King</h3>
-<ul>
-<li>ML forecasting on AWS</li>
-<li>Reduced overstock & churn</li>
-</ul>
-</div>
+  <!-- FREELANCE UK -->
+  <div class="card event">
+    <span>2024 – 2025</span>
+    <h3>Freelance Data Analyst — United Kingdom</h3>
+    <p><strong>Scope:</strong> End-to-end analytics solutions</p>
+    <ul>
+      <li>Built ML forecasting models for small businesses</li>
+      <li>Delivered SQL, Python & Power BI reporting systems</li>
+      <li>Translated raw business data into decision frameworks</li>
+    </ul>
+  </div>
 
-<div class="card event">
-<span>2024</span>
-<h3>MSc Data Science (Distinction)</h3>
-<p>University of Essex — Federated Learning thesis</p>
-</div>
+  <!-- MASTERS -->
+  <div class="card event">
+    <span>2023 – 2024</span>
+    <h3>MSc Data Science (Distinction) — University of Essex, UK</h3>
+    <p><strong>Specialization:</strong> Advanced ML & Data Engineering</p>
+    <ul>
+      <li>Thesis on Federated Learning & Differential Privacy</li>
+      <li>Focused on privacy-preserving AI in decentralized environments</li>
+    </ul>
+  </div>
 
-<div class="card event">
-<span>2017 – 2021</span>
-<h3>B.E. Computer Science (Distinction)</h3>
-<p>Osmania University</p>
-</div>
-<div class="card event">
-  <span>2025 – Present</span>
-  <h3>AI / ML Engineer — Zensar</h3>
-  <p><strong>Scope:</strong> Enterprise data & ML systems</p>
-  <p><strong>Scale:</strong> Multi-source, production workloads</p>
-  <ul>
-    <li>Salesforce → Snowflake pipelines</li>
-    <li>Predictive analytics systems</li>
-  </ul>
-</div>
-</div>
-</main>
+  <!-- DELIGHT -->
+  <div class="card event">
+    <span>2022 – 2023</span>
+    <h3>Software Implementation Consultant — Delight Innovations</h3>
+    <ul>
+      <li>Implemented enterprise systems for client environments</li>
+      <li>Bridged technical systems with business workflows</li>
+    </ul>
+  </div>
 
-<footer>© 2026</footer>
-<script src="script.js"></script>
-</body>
-</html>
+  <!-- COGNIZANT PAT -->
+  <div class="card event">
+    <span>2021 – 2022</span>
+    <h3>Program Analyst Trainee — Cognizant</h3>
+    <ul>
+      <li>Managed enterprise content management systems</li>
+      <li>Worked on Documentum & SAP integration frameworks</li>
+    </ul>
+  </div>
+
+  <!-- COGNIZANT INTERN -->
+  <div class="card event">
+    <span>2021</span>
+    <h3>Project Intern — Cognizant</h3>
+    <ul>
+      <li>Developed web applications using Java & Spring MVC</li>
+      <li>Exposure to enterprise-grade architecture patterns</li>
+    </ul>
+  </div>
+
+  <!-- B.E -->
+  <div class="card event">
+    <span>2017 – 2021</span>
+    <h3>B.E. Computer Science (Distinction) — Osmania University</h3>
+    <ul>
+      <li>Published research on AR Indoor Navigation</li>
+      <li>Strong foundation in DSA, distributed systems, AI</li>
+    </ul>
+  </div>
+
+</div>
